Add PWA support and update icons/manifest
Integrated @vite-pwa/nuxt module and added PWA configuration in nuxt.config.ts, including manifest and icons. Updated meta tags and favicon links, added various platform icons and manifest files to public/, and removed the unused preview.png. Minor class cleanup in home.vue.

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@nuxt/image": "^1.11.0",
     "@nuxthub/core": "^0.9.0",
     "@tailwindcss/vite": "^4.1.13",
+    "@vite-pwa/nuxt": "^1.0.4",
     "lucide-vue-next": "^0.543.0",
     "nuxt": "^4.1.1",
     "tailwindcss": "^4.1.13",
